# swr-cache

./: BENCHMARK_FINDINGS.md  BENCHMARK_GUIDE.md  Cargo.toml  README.md  docker-compose.yml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml
benches/: cache_benchmark.rs
benches/common/: config.rs  fixtures.rs  mod.rs
examples/: multi_namespace.rs
scripts/: start-redis.sh  stop-redis.sh  test.sh
src/: builder.rs  cache.rs  entry.rs  error.rs  lib.rs  namespace.rs  store.rs  swr.rs  tiered.rs  utils.rs
src/stores/: memory.rs  metrics.rs  mod.rs  moka.rs  redis.rs
tests/: integration_test.rs
